Sat May 21 00:36:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_commandline): build command line string
	  from argument vector in rb_execarg.
	  [ruby-core:75611] [Bug #12398]

Fri May 20 23:25:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl.c (ossl_pem_passwd_value): Added. Convert the
	  argument to String with StringValue() and validate the length is in
	  4..PEM_BUFSIZE. PEM_BUFSIZE is a macro defined in OpenSSL headers.
	  (ossl_pem_passwd_cb): When reading/writing encrypted PEM format, we
	  used to pass the password to PEM_def_callback() directly but it was
	  problematic. It is not NUL character safe. And surprisingly, it
	  silently truncates the password to 1024 bytes.  [GH ruby/openssl#51]

	* ext/openssl/ossl.h: Add function prototype declaration of newly
	  added ossl_pem_passwd_value().

	* ext/openssl/ossl_pkey.c (ossl_pkey_new_from_data): Use
	  ossl_pem_passwd_value() to validate the password String.

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_initialize, ossl_dsa_export):
	  ditto.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_initialize,
	  ossl_ec_key_to_string): ditto.

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_initialize, ossl_rsa_export):
	  ditto.

	* test/openssl/test_pkey_{dsa,ec,rsa}.rb: test this.

Fri May 20 23:45:53 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* id_table.c (list_id_table_init): When unaligned word access is
	  prohibited and sizeof(VALUE) is 8 (64-bit machines),
	  capa should always be even number for 8-byte word alignment
	  of the values of a table. This code assumes that sizeof(ID) is 4,
	  sizeof(VALUE) is 8, and xmalloc() returns 8-byte aligned memory.
	  This fixes bus error on 64-bit SPARC Solaris 10.
	  [Bug #12406][ruby-dev:49631]

Fri May 20 22:30:09 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* symbol.h (rb_id2sym): Use HAVE_BUILTIN___BUILTIN_CONSTANT_P

Fri May 20 22:19:00 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/date/date_core.c: [DOC] fix typos.