@@ -1,3 +1,12 @@
+Thu May 19 20:47:26 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/ossl_cipher.c (ossl_get_gcm_auth_tag): no need to
+	  allocate a temporary buffer.
+
+	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): no need to
+	  duplicate the value to set. M_ASN1_OCTET_STRING_set() (is a macro
+	  for ASN1_STRING_set()) doesn't modify the data passed as the argument.
+
 Sat May 21 00:36:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* process.c (rb_execarg_commandline): build command line string
